<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">变秘</string>
    <string name="loading">加载中...</string>
    <string name="press_back_again_to_exit">再按一次退出</string>
    <string name="no_network">木有网络</string>
    <string name="no_more_to_load">木有啦</string>
    <string name="welcome_tip_next">滑动有惊喜></string>
    <string name="welcome_guest">进去看看再说</string>
    <string name="cancel">取消</string>
    <string name="default_city">深圳</string>
    <string name="default_failed_tip">操作失败！</string>
    <string name="details">详情></string>

    <!-- 主界面 -->
    <string name="hot">大街</string>
    <string name="friend">朋友圈</string>
    <string name="nearby">身边</string>
    <string name="publish_secret">发秘密</string>
    <string name="look_reminder">瞧提醒</string>
    <string name="look_more">看更多</string>
    <string name="more">更多</string>
    <string name="add_friend">添加朋友</string>
    <string name="recommend">推荐</string>
    <string name="invite_friends">邀请好友</string>
    <string name="guest_action_publis_msg">要先注册，才能发表【变声秘密】哦！</string>
    <string name="guest_action_reminder_msg">要先注册，才能查看【提醒信息】哦！</string>
    <string name="guest_action_comments_msg">要先注册，才能查看变变们的【评论】哦！</string>
    <string name="guest_go_signup">去注册吧，骚年</string>
    <string name="guest_go_signup_settings">立即注册</string>
    <string name="guest_friends_tip">想听自己朋友圈，\n那帮家伙的【变声】秘密吗？</string>
    <string name="guest_friends_signup">那就赶紧去注册吧</string>
    <!-- 秘密列表 -->
    <string name="nodata_tip_secrets_hot">咦，大街上还没人哦！</string>
    <string name="nodata_tip_secrets_friends">还没有朋友圈秘密，\n快去邀请小伙伴们吧！</string>
    <string name="nodata_tip_secrets_nearby">这边还没发过秘密，\n嘿嘿，要不咱就来一发先！</string>
    <!-- 发表秘密 -->
    <string name="publish_secret_title">发表秘密</string>
    <string name="publish_edit_hint">匿名发表秘密</string>
    <string name="publish_new_secret">发表新秘密</string>
    <string name="confirm_abandon_input">确定放弃当前输入吗？</string>
    <string name="abandon_input">放弃输入</string>
    <string name="publish_faq">酱发秘密靠谱吗？\n\n放心吧，你的朋友们只知道是他们认识的某个人发的，但无法知道具体是谁！</string>
    <string name="ok_boring">恩，知道了</string>

    <!-- 提醒 -->
    <string name="message_center">消息中心</string>
    <string name="person_reminder">我的提醒</string>
    <string name="system_reminder">系统通知</string>
    <string name="nodata_tip_reminder_person">还没有我的提醒</string>
    <string name="nodata_tip_reminder_system">还没有系统通知</string>
    <string name="likes">点赞·%1$d</string>
    <string name="comments">评论·%1$d</string>

    <!-- 秘密详情 -->
    <string name="details_action_title">秘密详情</string>
    <string name="like">点赞</string>
    <string name="share">分享</string>
    <string name="floor_time_likes">%1$d楼.%2$s前.%3$d赞</string>
    <string name="floor_time">%1$d楼.%2$s前</string>
    <string name="publish_comments_without_name">匿名发表评论</string>
    <string name="second">秒</string>
    <string name="minute">分钟</string>
    <string name="hour">小时</string>
    <string name="day">天</string>
    <string name="month">个月</string>
    <string name="year">年</string>
    <string name="no_comments">暂无评论</string>

    <!-- 登录 -->
    <string name="signin">登录</string>
    <string name="phone_empty">手机号不能为空，请输入手机号</string>
    <string name="pwd_empty">密码不能为空，请输入密码</string>
    <string name="phone_error">手机号格式有误，请重新输入</string>
    <!-- 注册 -->
    <string name="signup">注册</string>
    <string name="signup_finish">完成注册</string>
    <string name="choose_countrycode">选择国家和地区代码</string>
    <string name="please_input_keyword">请输入关键字</string>
    <string name="sms_code">验证码</string>
    <string name="sms_dialog_msg">将发送【短信验证码】到这个手机号：%1$s</string>
    <string name="country_or_area">国家或地区</string>
    <string name="default_country_name">中国</string>
    <string name="default_country_code">+86</string>
    <string name="dont_receive_sms_verify_code">收不到验证码？</string>
    <string name="resend_sms_verify_code">重新获取验证码</string>
    <string name="phonenum">手机号</string>
    <string name="pwd">密码</string>
    <string name="sms_has_sended">短信已发送</string>
    <string name="sms_verify_success">验证成功</string>
    <string name="sms_verify_failed">验证失败</string>

    <!-- 拍照 -->
    <string name="photo_sd_error">保存图像失败！</string>
    <string name="photo_avatar_title">设置头像</string>
    <string name="photo_cover_title">设置封面</string>
    <string name="photo_pick">选择图片</string>
    <string name="photo_from_camera">拍照</string>
    <string name="photo_from_album">从相册选择</string>

    <!-- 设置 -->
    <string name="settings">设置</string>
    <string name="settings_pwd">设置密码</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="if_restart">设置成功，是否重新启动？</string>
    <string name="settings_forgot_pwd">忘记密码？</string>
    <string name="current_version">版本:V%1$s</string>
    <string name="faq">常见问题</string>
    <string name="chack_update">检查更新</string>
    <string name="signout">退出登录</string>
    <string name="clear_privacy">清除痕迹</string>
    <string name="clear_privacy_tip">将清除你之前发表的所有信息！</string>
    <string name="continue_to_clear">继续清除</string>
    <string name="clear_privacy_ok">已清除</string>
    <string name="ad_recommendation">最美应用</string>
    <!-- 输入控件 -->
    <string name="inputsuit_submit">发表</string>
    <string name="inputsuit_photo_album">照片</string>
    <string name="inputsuit_photo_camera">相机</string>
    <string name="inputsuit_record">请按住说话</string>
    <string name="inputsuit_record_pressed">松开结束</string>
    <string name="inputsuit_record_empty">录音时间太短</string>
    <string name="inputsuit_rerecord_tip">重录将删除刚才的录音</string>
    <string name="rerecording">重录</string>
    <string name="continue_to_rerecording">继续重录</string>
    <string name="inputsuit_voice_wang">老王</string>
    <string name="inputsuit_voice_tom">汤姆</string>
    <string name="pitch">音调</string>
    <string name="tempo">音速</string>
    <string name="inputsuit_click_start_record">点击录音</string>
    <string name="inputsuit_click_stop_record">点击结束</string>
    <string name="audio_file_error">无法读取音频文件！</string>
    <!-- 九宫格密码锁 -->
    <string name="try_again">重试</string>
    <string name="signin_again">重新登录</string>
    <string name="forget_ninelock_pwd_dialog_tip">忘记手势密码，需要重新登录！</string>
    <string name="goon">继续</string>
    <string name="confirm">确认</string>
    <string name="lockpattern_recording_incorrect_too_short">"至少连接4个点"</string>
    <string name="ninelock_pwd_error">"手势密码错误！"</string>
    <string name="forget_ninelock_pwd">忘记手势密码？</string>
    <string name="restart_at_once">立即重启</string>

</resources>