<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_action_add"
        android:orderInCategory="99"
        android:showAsAction="always"
        android:title="@string/publish_secret"/>
    <item
        android:id="@+id/action_notice"
        android:icon="@drawable/ic_action_notice"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/look_notices"/>
    <item
        android:id="@+id/action_more"
        android:icon="@drawable/ic_action_more"
        android:orderInCategory="101"
        android:showAsAction="always"
        android:title="@string/look_more">
        <menu>
            <item
                android:id="@+id/action_more_addfriend"
                android:orderInCategory="101"
                android:showAsAction="ifRoom|withText"
                android:title="@string/add_friend"/>
            <item
                android:id="@+id/action_more_recommend"
                android:orderInCategory="101"
                android:showAsAction="ifRoom|withText"
                android:title="@string/recommend"/>
            <item
                android:id="@+id/action_more_settings"
                android:orderInCategory="101"
                android:showAsAction="ifRoom|withText"
                android:title="@string/settings"/>
        </menu>
    </item>
    <item
        android:id="@+id/action_loading"
        android:actionLayout="@layout/actionbar_loading_layout"
        android:icon="@android:color/transparent"
        android:orderInCategory="102"
        android:showAsAction="always"
        android:title="@string/loading"/>

</menu>