<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_like"
        android:icon="@drawable/ab_ic_like"
        android:orderInCategory="99"
        android:showAsAction="always"
        android:title="@string/like"/>
    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ab_menu_ic_share"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/share"/>
    <item
        android:id="@+id/action_loading"
        android:actionLayout="@layout/actionbar_loading_layout"
        android:icon="@android:color/transparent"
        android:orderInCategory="101"
        android:showAsAction="always"
        android:title="@string/loading"
        android:visible="false"/>

</menu>