<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <RelativeLayout
        android:id="@+id/password_group"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:background="@drawable/selector_actionbar_menu" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/settings_pwd" />

        <com.link.bianmi.widget.SwitchButton
            android:id="@+id/settings_item_password_switchbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true" />
    </RelativeLayout>

    <include layout="@layout/divider" />

    <RelativeLayout
        android:id="@+id/invite_friends_group"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:background="@drawable/selector_actionbar_menu" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/invite_friends" />
    </RelativeLayout>

    <include layout="@layout/divider" />

    <!-- 常见问题 -->

    <RelativeLayout
        android:id="@+id/faq_group"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:background="@drawable/selector_actionbar_menu" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/faq" />
    </RelativeLayout>

    <include layout="@layout/divider" />

    <!-- 精品推荐 -->

    <RelativeLayout
        android:id="@+id/ad_group"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:background="@drawable/selector_actionbar_menu" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/ad_recommendation" />
    </RelativeLayout>

    <include layout="@layout/divider" />

    <!-- 检查更新 -->

    <RelativeLayout
        android:id="@+id/update_group"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:background="@drawable/selector_actionbar_menu" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/chack_update" />

        <TextView
            android:id="@+id/version_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/current_version" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@color/main_purple" />

    <!-- 清除痕迹 -->

    <RelativeLayout
        android:id="@+id/settings_item_clear_group"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:background="@drawable/selector_actionbar_menu" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/clear_privacy" />
    </RelativeLayout>

    <include layout="@layout/divider" />
    <!-- 退出登录 -->

    <RelativeLayout
        android:id="@+id/settings_item_exit_group"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:background="@drawable/selector_actionbar_menu" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/signout" />
    </RelativeLayout>

    <!-- 立即注册 -->

    <RelativeLayout
        android:id="@+id/settings_item_guest_group"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:background="@drawable/selector_actionbar_menu" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/guest_go_signup_settings"
            android:textColor="@color/font_highlight"
            android:textStyle="bold" />
    </RelativeLayout>

    <include layout="@layout/divider" />

</LinearLayout>