<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/page_padding_left"
    android:paddingRight="@dimen/page_padding_right"
    android:paddingTop="@dimen/page_padding_top" >

    <com.link.bianmi.widget.ClearEditText
        android:id="@+id/phone_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_input"
        android:hint="@string/phonenum"
        android:inputType="phone"
        android:padding="@dimen/dp_10"
        android:textSize="@dimen/main_edittext_size" />

    <com.link.bianmi.widget.ClearEditText
        android:id="@+id/pwd_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_15"
        android:background="@drawable/selector_input"
        android:hint="@string/pwd"
        android:inputType="textPassword"
        android:padding="@dimen/dp_10"
        android:textSize="@dimen/main_edittext_size" />

    <Button
        android:id="@+id/signin_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:background="@drawable/selector_btn_green"
        android:text="@string/signin"
        android:textColor="@android:color/white" />

</LinearLayout>