<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/page_padding_left"
    android:paddingRight="@dimen/page_padding_right"
    android:paddingTop="@dimen/page_padding_top" >

    <com.link.bianmi.widget.ClearEditText
        android:id="@+id/phone_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_input"
        android:hint="@string/phonenum"
        android:inputType="phone"
        android:textSize="@dimen/main_edittext_size" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_36"
        android:layout_marginTop="@dimen/dp_15" >

        <com.link.bianmi.widget.ClearEditText
            android:id="@+id/pwd_edittext"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@+id/checkbox_group"
            android:background="@drawable/selector_input"
            android:hint="@string/pwd"
            android:inputType="textPassword"
            android:textSize="@dimen/main_edittext_size" />

        <RelativeLayout
            android:id="@+id/checkbox_group"
            android:layout_width="@dimen/dp_70"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:background="@drawable/selector_input_special" >

            <CheckBox
                android:id="@+id/switch_pwd_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/selector_checkbox_see"
                android:button="@null"
                android:checked="false"
                android:gravity="center" />
        </RelativeLayout>
    </RelativeLayout>

    <Button
        android:id="@+id/signup_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:background="@drawable/selector_btn_red"
        android:text="@string/signup"
        android:textColor="@android:color/white" />

</LinearLayout>